fixed front page misalignment

--- a/app/assets/stylesheets/profile_pages.css.scss
+++ b/app/assets/stylesheets/profile_pages.css.scss
@@ -5,8 +5,16 @@
 body{
   background-image: image-url("front-page.jpeg");
   background-position: 0px 70px;
+  background-repeat: no-repeat;
   background-size:100%;
 }
+
+@media (max-width: 1000px) {
+  body{
+      background-size: 1000px 600px; /* Force the image to its minimum width */
+  }
+}
+
 
 $nav-grey: #333333;
 
@@ -175,6 +183,12 @@ a:link, a:visited {
   width: 100%;
 }
 
+#centerBlock{
+  width: 100%;
+  height: 550px;
+  position: relative;
+}
+
 #centerBox input{
   width: 100%;
 }
@@ -186,9 +200,8 @@ a:link, a:visited {
   background-color: $nav-grey;
   width:100%;
   margin:0px;
-  height: 275px;
-  position: absolute;
-  bottom: 65px;
+  height: 300px;
+  bottom: 0px;
 }
 
 #search{
@@ -234,7 +247,7 @@ ul li{
   left: 0;
   right: 0;
   width: 800px;
-  padding: 0 0 20px;
+  padding: 0 0 40px;
   border-top: solid grey 1px;
 }
 
@@ -257,7 +270,6 @@ ul li{
   width:100%;
   background-color: black;
   height: 65px;
-  position: absolute;
   bottom: 0;
 }
 
